tests/baselines/reference/defaultDeclarationEmitNamedCorrectly.errors.txt
defaultDeclarationEmitNamedCorrectly.ts(13,5): error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.


==== defaultDeclarationEmitNamedCorrectly.ts (1 errors) ====
    export interface Things<P, T> {
        p: P;
        t: T;
    }
    export function make<P, CTor>(x: { new (): CTor & {props: P} }): Things<P, CTor> {
        return null as any;
    }
    
    export interface Props {
    }
    
    export default class MyComponent {
        props: Props;
        ~~~~~
!!! error TS2564: Property 'props' has no initializer and is not definitely assigned in the constructor.
        static create = make(MyComponent);
    }